syntax = "proto3";

import "common/v1/jobs.proto";

package d2.auth.v1;

option csharp_namespace = "D2.Services.Protos.Auth.V1";

// *********************************
// **** AuthJobService gRPC API ****
// *********************************

service AuthJobService {
  // Purge expired sessions from PostgreSQL.
  // BetterAuth only lazy-deletes on token presentation; this removes stale rows.
  rpc PurgeExpiredSessions(d2.common.v1.TriggerJobRequest)
      returns (d2.common.v1.TriggerJobResponse);

  // Purge sign-in events older than the configured retention period (default 90 days).
  rpc PurgeSignInEvents(d2.common.v1.TriggerJobRequest)
      returns (d2.common.v1.TriggerJobResponse);

  // Clean up expired invitations past the grace period (default 7 days after expiry).
  rpc CleanupExpiredInvitations(d2.common.v1.TriggerJobRequest)
      returns (d2.common.v1.TriggerJobResponse);

  // Clean up expired or revoked emulation consents.
  rpc CleanupExpiredEmulationConsents(d2.common.v1.TriggerJobRequest)
      returns (d2.common.v1.TriggerJobResponse);
}
